refine, fix: too much fetching

--- a/src/pages/main/styles.module.css
+++ b/src/pages/main/styles.module.css
@@ -22,3 +22,8 @@
     gap: 20px;
     margin-top: 30px;
 }
+
+.logout_btn {
+    display: flex;
+    align-items: flex-end;
+}
